--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,8 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: none
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+
   datasource:
     url: ${DATASOURCE_URL}
     username: ${DATASOURCE_USERNAME}
