--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy to AWS CodeDeploy
+name: Build and Deploy to EC2
 
 on:
   push:
@@ -19,11 +19,11 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 11
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '11'
+          java-version: '21'
 
       - name: Grant execute permission for Gradle wrapper
         run: chmod +x gradlew
@@ -47,6 +47,8 @@ jobs:
       DATASOURCE_URL: ${{ secrets.DATASOURCE_URL }}
       DATASOURCE_USERNAME: ${{ secrets.DATASOURCE_USERNAME }}
       DATASOURCE_PASSWORD: ${{ secrets.DATASOURCE_PASSWORD }}
+      EC2_HOST: ${{ secrets.EC2_HOST }}
+      EC2_USER: ${{ secrets.EC2_USER }}
     steps:
       - name: Download build artifact
         uses: actions/download-artifact@v3
@@ -54,20 +56,28 @@ jobs:
           name: app-jar
           path: build/libs
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
+      - name: Copy artifact to EC2
+        uses: appleboy/scp-action@master
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          port: 22
+          source: "build/libs/*.jar"
+          target: "/home/${{ secrets.EC2_USER }}/app.jar"
 
-      - name: Upload artifact to S3
-        run: |
-          aws s3 cp build/libs/*.jar s3://${{ secrets.S3_BUCKET_NAME }}/app.jar
-
-      - name: Deploy to EC2 via AWS CodeDeploy (Amazon Linux)
-        run: |
-          aws deploy create-deployment \
-            --application-name "${{ secrets.CODEDEPLOY_APPLICATION_NAME }}" \
-            --deployment-group-name "${{ secrets.CODEDEPLOY_DEPLOYMENT_GROUP }}" \
-            --s3-location bucket=${{ secrets.S3_BUCKET_NAME }},key=app.jar,bundleType=jar
+      - name: Restart application on EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          port: 22
+          script: |
+            #!/bin/bash
+            echo "Stopping existing application..."
+            pkill -f 'java -jar' || true
+            sleep 5
+            echo "Starting new application..."
+            nohup java -jar /home/${{ secrets.EC2_USER }}/app.jar > /home/${{ secrets.EC2_USER }}/app.log 2>&1 &
+            echo "Deployment complete."
