--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,11 +28,11 @@ jobs:
       - name: Grant execute permission for Gradle wrapper
         run: chmod +x gradlew
 
-      - name: Build with Gradle
-        run: ./gradlew clean build
+      - name: Build with Gradle (skip tests)
+        run: ./gradlew clean build -x test
 
       - name: Upload build artifact
-        uses: actions/checkout@v4
+        uses: actions/upload-artifact@v3
         with:
           name: app-jar
           path: build/libs/*.jar
