--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,7 +32,7 @@ jobs:
         run: ./gradlew clean build -x test
 
       - name: Upload build artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/checkout@v4
         with:
           name: app-jar
           path: build/libs/*.jar
