--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -80,5 +80,6 @@ jobs:
             sleep 5
             echo "Starting new application..."
             nohup java -jar /home/${{ secrets.EC2_USER }}/app.jar > /home/${{ secrets.EC2_USER }}/app.log 2>&1 &
+            sleep 5
             echo "Deployment complete."
             exit 0
