--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -70,14 +70,6 @@ jobs:
             echo "Stopping and removing old container..."
             docker rm -f opensource_server || true
             echo "Starting new container..."
-            docker run -d --name opensource_server -p 8080:8080 \
-            -e KAKAO_REDIRECT_URI="${KAKAO_REDIRECT_URI}" \
-            -e KAKAO_API_KEY="${KAKAO_API_KEY}" \
-            -e JWT_SECRET_KEY="${JWT_SECRET_KEY}" \
-            -e DATASOURCE_URL="${DATASOURCE_URL}" \
-            -e DATASOURCE_USERNAME="${DATASOURCE_USERNAME}" \
-            -e DATASOURCE_PASSWORD="${DATASOURCE_PASSWORD}" \
-            "${DOCKER_IMAGE_NAME}:latest"
-            $DOCKER_IMAGE_NAME:latest
+            docker run -d --name opensource_server -p 8080:8080 -e KAKAO_REDIRECT_URI="${KAKAO_REDIRECT_URI}" -e KAKAO_API_KEY="${KAKAO_API_KEY}" -e JWT_SECRET_KEY="${JWT_SECRET_KEY}" -e DATASOURCE_URL="${DATASOURCE_URL}" -e DATASOURCE_USERNAME="${DATASOURCE_USERNAME}" -e DATASOURCE_PASSWORD="${DATASOURCE_PASSWORD}" "${DOCKER_IMAGE_NAME}:latest"
             echo "Deployment complete."
             exit 0
