--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -54,6 +54,12 @@ jobs:
       EC2_USER: ${{ secrets.EC2_USER }}
       EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
       DOCKER_IMAGE_NAME: ${{ secrets.DOCKER_IMAGE_NAME }}
+      KAKAO_REDIRECT_URI: ${{ secrets.KAKAO_REDIRECT_URI }}
+      KAKAO_API_KEY: ${{ secrets.KAKAO_API_KEY }}
+      JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
+      DATASOURCE_URL: ${{ secrets.DATASOURCE_URL }}
+      DATASOURCE_USERNAME: ${{ secrets.DATASOURCE_USERNAME }}
+      DATASOURCE_PASSWORD: ${{ secrets.DATASOURCE_PASSWORD }}
     steps:
       - name: Deploy Docker image on EC2
         uses: appleboy/ssh-action@master
@@ -66,17 +72,17 @@ jobs:
           script: |
             #!/bin/bash
             echo "Pulling latest Docker image..."
-            docker pull ${{DOCKER_IMAGE_NAME}}:latest
+            docker pull ${DOCKER_IMAGE_NAME}:latest
             echo "Stopping and removing old container..."
             docker rm -f opensource_server || true
             echo "Starting new container..."
             docker run -d --name opensource_server -p 8080:8080 \
-            -e KAKAO_REDIRECT_URI=${{KAKAO_REDIRECT_URI}} \
-            -e KAKAO_API_KEY=${{KAKAO_API_KEY}} \
-            -e JWT_SECRET_KEY=${{JWT_SECRET_KEY}} \
-            -e DATASOURCE_URL=${{DATASOURCE_URL}} \
-            -e DATASOURCE_USERNAME=${{DATASOURCE_USERNAME}} \
-            -e DATASOURCE_PASSWORD=${{DATASOURCE_PASSWORD}} \
-            ${{DOCKER_IMAGE_NAME}}:latest
+            -e KAKAO_REDIRECT_URI=${KAKAO_REDIRECT_URI} \
+            -e KAKAO_API_KEY=${KAKAO_API_KEY} \
+            -e JWT_SECRET_KEY=${JWT_SECRET_KEY} \
+            -e DATASOURCE_URL=${DATASOURCE_URL} \
+            -e DATASOURCE_USERNAME=${DATASOURCE_USERNAME} \
+            -e DATASOURCE_PASSWORD=${DATASOURCE_PASSWORD} \
+            ${DOCKER_IMAGE_NAME}:latest
             echo "Deployment complete."
             exit 0
