--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -77,12 +77,12 @@ jobs:
             docker rm -f opensource_server || true
             echo "Starting new container..."
             docker run -d --name opensource_server -p 8080:8080 \
-            -e KAKAO_REDIRECT_URI=${{secrets.KAKAO_REDIRECT_URI}} \
-            -e KAKAO_API_KEY=${{secrets.KAKAO_API_KEY}} \
-            -e JWT_SECRET_KEY=${{secrets.JWT_SECRET_KEY}} \
-            -e DATASOURCE_URL=${{secrets.DATASOURCE_URL}} \
-            -e DATASOURCE_USERNAME=${{secrets.DATASOURCE_USERNAME}} \
-            -e DATASOURCE_PASSWORD=${{secrets.DATASOURCE_PASSWORD}} \
+            -e KAKAO_REDIRECT_URI="${{secrets.KAKAO_REDIRECT_URI}}" \
+            -e KAKAO_API_KEY="${{secrets.KAKAO_API_KEY}}" \
+            -e JWT_SECRET_KEY="${{secrets.JWT_SECRET_KEY}}" \
+            -e DATASOURCE_URL="${{secrets.DATASOURCE_URL}}" \
+            -e DATASOURCE_USERNAME="${{secrets.DATASOURCE_USERNAME}}" \
+            -e DATASOURCE_PASSWORD="${{secrets.DATASOURCE_PASSWORD}}" \
              ${{secrets.DOCKER_IMAGE_NAME}}:latest
             echo "Deployment complete."
             exit 0
