--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,7 @@ server:
   port: ${PORT}
   ssl:
     enabled: ${SSL_ENABLED}
-    key-store: classpath:keystore.p12
+    key-store: /etc/letsencrypt/keystore.p12
     key-store-password: ${SSL_KEY}
     key-store-type: PKCS12
     key-alias: tomcat
