--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -77,6 +77,7 @@ jobs:
             docker rm -f opensource_server || true
             echo "Starting new container..."
             docker run -d --name opensource_server -p ${{secrets.port}}:${{secrets.port}} \
+            -v /etc/letsencrypt/keystore.p12:/etc/letsencrypt/keystore.p12 \
             -e KAKAO_REDIRECT_URI="${{secrets.KAKAO_REDIRECT_URI}}" \
             -e KAKAO_API_KEY="${{secrets.KAKAO_API_KEY}}" \
             -e JWT_SECRET_KEY="${{secrets.JWT_SECRET_KEY}}" \
