--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,8 +31,9 @@ server:
     key-alias: tomcat
 
 apple:
-  team-id: ${APPLE_TEAM_ID}
-  key-id: ${APPLE_KEY_ID}
-  client-id: ${APPLE_CLIENT_ID}
-  redirect-uri: ${APPLE_REDIRECT_URI}
-  private-key: ${APPLE_PRIVATE_KEY}
+  team_id: ${APPLE_TEAM_ID}
+  key_id: ${APPLE_KEY_ID}
+  client_id: ${APPLE_CLIENT_ID}
+  redirect_uri: ${APPLE_REDIRECT_URI}
+  private_key: ${APPLE_PRIVATE_KEY}
+
