--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -83,7 +83,7 @@ jobs:
             -e APPLE_TEAM_ID="${{secrets.APPLE_TEAM_ID}}" \
             -e APPLE_KEY_ID="${{secrets.APPLE_KEY_ID}}" \
             -e APPLE_CLIENT_ID="${{secrets.APPLE_CLIENT_ID}}" \
-            -e APPLE_REDIRECT_URI="${{secrets.APPLE_REDIRECT_URI}}" 
+            -e APPLE_REDIRECT_URI="${{secrets.APPLE_REDIRECT_URI}}" \
             -e APPLE_PRIVATE_KEY="${{secrets.APPLE_PRIVATE_KEY}}" \
             -e JWT_SECRET_KEY="${{secrets.JWT_SECRET_KEY}}" \
             -e DATASOURCE_URL="${{secrets.DATASOURCE_URL}}" \
