--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,11 @@ dependencies {
     annotationProcessor('org.projectlombok:lombok')
     runtimeOnly('com.h2database:h2')
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // Selenium
+    implementation 'org.seleniumhq.selenium:selenium-java:4.20.0'
+    //WebDriverManager
+    implementation 'io.github.bonigarcia:webdrivermanager:5.8.0'
 }
 
 tasks.named('test') {
