1. SecurityConfig.java에서 파일 업로드 부분을 임시로 열어놓음  2. uploadSuccess.html 등 파일 업로드용 임시 html  3. 임시 저장 경로는 "./temp_for_upload/"  4. 노션에 Tesseract 사용법 작성 완료  5. 리턴 방식 재협의 필요 (Model을 리턴할지, JSON을 리턴할지)

--- a/build.gradle
+++ b/build.gradle
@@ -42,8 +42,30 @@ dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:4.20.0'
     //WebDriverManager
     implementation 'io.github.bonigarcia:webdrivermanager:5.8.0'
+
+    // test_ljj
+    testImplementation platform('org.junit:junit-bom:5.10.0')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    // tesseract_ljj
+    implementation 'net.sourceforge.tess4j:tess4j:5.13.0'
+    implementation 'org.bytedeco:javacv-platform:1.5.10'
+
+    // pdfbox_ljj
+    implementation 'org.apache.pdfbox:pdfbox:3.0.4'
+
 }
+
 
 tasks.named('test') {
     useJUnitPlatform()
+
+    // test_ljj
+    systemProperty "jna.library.path", "/opt/homebrew/opt/tesseract/lib"
+}
+
+
+// tesseract_ljj
+tasks.withType(JavaExec) {
+    jvmArgs "-Djava.library.path=/opt/homebrew/lib"
 }
