1. 웬투밋 구현 완료.  2. data.sql은 데이터베이스 연동을 위한 DML sql 파일  3. application.properties는 MySQL 실험을 위해 만들었습니다. 로컬에 맞게끔 수정해주세요.  4. 스프링 시큐리티에 웬투밋 실험용 url 다 열어놨습니다.  5. 이번에는 테스트용 뷰어는 만들지 않았습니다. MySQL 혹은 포스트맨을 통해서 확인해주세요.  6. schema.sql에 참조키 관련 문제가 있는 것 같아서 일부 수정했습니다. 머지 전에 확인 부탁드립니다.  7. UserRepository를 상속해서 dao를 하나 더 만들까 하다가 상속하지 않고 UserRepository에 findBy 메서드를 하나 추가했습니다.  8. 실험용 데이터에서는 문제가 없긴 했는데 테스트 케이스가 적어서 추가 확인이 필요합니다.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,17 +12,25 @@ spring:
     show-sql: false
     open-in-view: false
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
+    defer-datasource-initialization: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
+  sql:
+    init:
+      mode: always
   servlet:
     multipart:
       max-file-size: 100MB
       max-request-size: 100MB
   datasource:
-    url: ${DATASOURCE_URL}
+    url: ${DATASOURCE_URL}?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC  # UTF-8 설정 추가
     username: ${DATASOURCE_USERNAME}
     password: ${DATASOURCE_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
+  h2:
+    console:
+      enabled: false
+      path: /h2-console
 
 server:
   port: ${PORT}
