--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -74,30 +74,34 @@ jobs:
           request_pty: true
           script: |
             #!/bin/bash
-            echo "Pulling latest Docker image..."
-            docker pull ${{secrets.DOCKER_IMAGE_NAME}}:latest
             echo "Stopping and removing old container..."
             docker rm -f opensource_server || true
+            
+            echo "Pruning unused Docker objects (images, containers, volumes)…"
             docker system prune -a -f
+            
+            echo "Pulling latest Docker image..."
+            docker pull ${{ secrets.DOCKER_IMAGE_NAME }}:latest
+            
             echo "Starting new container..."
             docker run -d --name opensource_server -p 8080:8080 \
-            -v /etc/letsencrypt/keystore.p12:/etc/letsencrypt/keystore.p12 \
-            -e KAKAO_REDIRECT_URI="${{secrets.KAKAO_REDIRECT_URI}}" \
-            -e KAKAO_API_KEY="${{secrets.KAKAO_API_KEY}}" \
-            -e OPENAI_API_KEY="${{ secrets.OPENAI_API_KEY }}" \
-            -e APPLE_TEAM_ID="${{secrets.APPLE_TEAM_ID}}" \
-            -e APPLE_KEY_ID="${{secrets.APPLE_KEY_ID}}" \
-            -e APPLE_CLIENT_ID="${{secrets.APPLE_CLIENT_ID}}" \
-            -e APPLE_REDIRECT_URI="${{secrets.APPLE_REDIRECT_URI}}" \
-            -e APPLE_PRIVATE_KEY="${{secrets.APPLE_PRIVATE_KEY}}" \
-            -e JWT_SECRET_KEY="${{secrets.JWT_SECRET_KEY}}" \
-            -e DATASOURCE_URL="${{secrets.DATASOURCE_URL}}" \
-            -e DATASOURCE_USERNAME="${{secrets.DATASOURCE_USERNAME}}" \
-            -e DATASOURCE_PASSWORD="${{secrets.DATASOURCE_PASSWORD}}" \
-            -e OPENAI_API_KEY="${{secrets.OPENAI_API_KEY}}" \
-            -e TESSERACT_DATAPATH="${{secrets.TESSERACT_DATAPATH}}" \
-            -e SSL_ENABLED=true \
-            -e SSL_KEY=${{secrets.SSL_KEY}} \
-             ${{secrets.DOCKER_IMAGE_NAME}}:latest
+              -v /etc/letsencrypt/keystore.p12:/etc/letsencrypt/keystore.p12 \
+              -e KAKAO_REDIRECT_URI="${{secrets.KAKAO_REDIRECT_URI}}" \
+              -e KAKAO_API_KEY="${{secrets.KAKAO_API_KEY}}" \
+              -e OPENAI_API_KEY="${{ secrets.OPENAI_API_KEY }}" \
+              -e APPLE_TEAM_ID="${{secrets.APPLE_TEAM_ID}}" \
+              -e APPLE_KEY_ID="${{secrets.APPLE_KEY_ID}}" \
+              -e APPLE_CLIENT_ID="${{secrets.APPLE_CLIENT_ID}}" \
+              -e APPLE_REDIRECT_URI="${{secrets.APPLE_REDIRECT_URI}}" \
+              -e APPLE_PRIVATE_KEY="${{secrets.APPLE_PRIVATE_KEY}}" \
+              -e JWT_SECRET_KEY="${{secrets.JWT_SECRET_KEY}}" \
+              -e DATASOURCE_URL="${{secrets.DATASOURCE_URL}}" \
+              -e DATASOURCE_USERNAME="${{secrets.DATASOURCE_USERNAME}}" \
+              -e DATASOURCE_PASSWORD="${{secrets.DATASOURCE_PASSWORD}}" \
+              -e TESSERACT_DATAPATH="${{secrets.TESSERACT_DATAPATH}}" \
+              -e SSL_ENABLED=true \
+              -e SSL_KEY=${{secrets.SSL_KEY}} \
+              ${{ secrets.DOCKER_IMAGE_NAME }}:latest
+            
             echo "Deployment complete."
             exit 0
