--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/opensource?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=rootpass
+spring.datasource.username=opensource
+spring.datasource.password=12341234
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.defer-datasource-initialization=true
