--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     // openCV_ljj
     implementation 'org.openpnp:opencv:4.7.0-0'
     implementation files('libs/opencv-4110.jar')
+
+    implementation 'org.json:json:20240303'
 }
 
 
