--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework:spring-webflux'
-    implementation 'com.mysql:mysql-connector-j:8.0.32'
+    implementation 'com.mysql:mysql-connector-j:8.1.0'
     implementation 'com.nimbusds:nimbus-jose-jwt:9.37'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
